force-app/main/default/objects/Charket__WeChatMessage__c/Charket__WeChatMessage__c.object-meta.xml
<CustomObject>
    <label>WeChat Message</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>