force-app/main/default/objects/Charket__WeChatMessage__c/fields/Charket__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Charket__ExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>