force-app/main/default/objects/Charket__WeChatMessage__c/fields/Charket__QuickReplyType__c.field-meta.xml
<CustomField>
    <fullName>Charket__QuickReplyType__c</fullName>
    <label>Quick Reply Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>