force-app/main/default/objects/Charket__WeChatMessage__c/fields/Charket__TimesUsed__c.field-meta.xml
<CustomField>
    <fullName>Charket__TimesUsed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Times Used</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>