force-app/main/default/objects/Charket__WeChatMessage__c/fields/Charket__WeChatMediaId__c.field-meta.xml
<CustomField>
    <fullName>Charket__WeChatMediaId__c</fullName>
    <externalId>true</externalId>
    <label>WeChat Media ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>