force-app/main/default/objects/Charket__WeChatMessage__c/validationRules/Charket__Text_Message_Body_Can_Not_Be_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Charket__Text_Message_Body_Can_Not_Be_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Charket__Type__c ,&apos;Text Message&apos;),ISBLANK( Charket__TextBody__c))</errorConditionFormula>
    <errorDisplayField>Charket__TextBody__c</errorDisplayField>
    <errorMessage>Text Body is required if Message is a text message.</errorMessage>
</ValidationRule>