force-app/main/default/objects/Charket__WeChatMessage__c/listViews/Charket__All1.listView-meta.xml
<ListView>
    <fullName>Charket__All1</fullName>
    <columns>NAME</columns>
    <columns>Charket__TextBody__c</columns>
    <columns>Charket__Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>